--- a/ShopeeClone/package.json
+++ b/ShopeeClone/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "@floating-ui/react": "^0.26.6",
     "@hookform/resolvers": "^3.3.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.17.0",
     "@tanstack/react-query-devtools": "^5.17.0",
     "axios": "^1.6.3",
+    "classnames": "^2.5.1",
+    "dompurify": "^3.0.8",
     "framer-motion": "^10.18.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -28,6 +31,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.37",
