--- a/ShopeeClone/package.json
+++ b/ShopeeClone/package.json
@@ -22,13 +22,16 @@
     "classnames": "^2.5.1",
     "dompurify": "^3.0.8",
     "framer-motion": "^10.18.0",
+    "i18next": "^23.11.5",
     "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-i18next": "^14.1.2",
     "react-router-dom": "^6.21.0",
     "react-toastify": "^10.0.1",
+    "update-browserslist-db": "^1.0.16",
     "yup": "^1.3.3"
   },
   "devDependencies": {
